--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "2.21.0",
     "prop-types": "15.6.1",
     "react": "16.2.0",
+    "react-dimensions": "1.3.1",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
     "react-scripts": "1.1.1",
