--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "3.7.2",
     "redux-haiku": "0.1.4",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "reselect": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
