--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux-haiku": "0.1.4",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.2.0",
+    "redux-watch": "1.1.1",
     "reselect": "3.0.1"
   },
   "scripts": {
