--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "classnames": "2.2.5",
+    "isomorphic-fetch": "2.2.1",
     "lodash": "4.17.5",
     "moment": "2.21.0",
+    "path": "0.12.7",
     "prop-types": "15.6.1",
     "react": "16.2.0",
     "react-dimensions": "1.3.1",
