--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dimensions": "1.3.1",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
+    "react-select": "1.2.1",
     "react-scripts": "1.1.1",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
