--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dimensions": "1.3.1",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
-    "react-select": "1.2.1",
     "react-scripts": "1.1.1",
+    "react-select": "1.2.1",
+    "react-select-fast-filter-options": "0.2.3",
+    "react-virtualized-select": "3.1.3",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.2.0",
