--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "path": "0.12.7",
     "prop-types": "15.6.1",
     "react": "16.2.0",
-    "react-dimensions": "1.3.1",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
+    "react-resize-detector": "2.3.0",
     "react-scripts": "1.1.1",
     "react-select": "1.2.1",
     "react-select-fast-filter-options": "0.2.3",
