--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
     "react-resize-detector": "2.3.0",
+    "react-rnd": "7.4.0",
     "react-scripts": "1.1.1",
     "react-select": "1.2.1",
     "react-select-fast-filter-options": "0.2.3",
