--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "3.3.1",
     "jquery-ui": "1.12.1",
     "lodash": "4.17.5",
+    "lodash-clean": "2.0.1",
     "moment": "2.21.0",
     "osmtogeojson": "^3.0.0-beta.3",
     "path": "0.12.7",
