--- a/package.json
+++ b/package.json
@@ -40,7 +40,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "23.0.1",
+    "babel-preset-env": "1.7.0",
+    "jest": "23.1.0"
   }
 }
