--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "babel-jest": "23.0.1",
     "babel-preset-env": "1.7.0",
-    "jest": "23.1.0"
+    "jest": "23.1.0",
+    "redux-testkit": "1.0.6"
   }
 }
