Map editing tools

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "path": "0.12.7",
     "proj4": "2.4.4",
     "prop-types": "15.6.1",
+    "rc-slider": "8.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
