--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "test:watch": "npm test -- --watch",
+    "test:watch": "jest __tests__ --watch",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-jest": "23.0.1",
+    "babel-jest": "23.4.0",
     "babel-preset-env": "1.7.0",
-    "jest": "23.1.0",
+    "jest": "23.4.0",
     "redux-testkit": "1.0.6"
   }
 }
