--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "classnames": "2.2.5",
     "d3": "4.13.0",
     "earcut": "2.1.3",
-    "fuzzy-search": "2.1.0",
+    "fuzzy": "0.1.3",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.3.1",
     "jquery-ui": "1.12.1",
