--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-thunk": "2.2.0",
     "redux-watch": "1.1.1",
     "reselect": "3.0.1",
+    "re-reselect": "2.1.0",
     "select2": "^4.0.6-rc.1",
     "string": "^3.3.3",
     "tinysort": "^2.3.6",
