--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-virtualized-select": "3.1.3",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
+    "redux-mock-store": "1.5.3",
     "redux-thunk": "2.2.0",
     "redux-watch": "1.1.1",
     "reselect": "3.0.1",
