Testing: Export request as function

--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-jest": "23.4.0",
+    "jest": "23.6.0",
+    "babel-jest": "23.6.0",
     "babel-preset-env": "1.7.0",
+    "babel-plugin-jest-hoist": "23.2.0",
     "redux-testkit": "1.0.6"
   }
 }
