Clean up & update dependencies

--- a/package.json
+++ b/package.json
@@ -1,47 +1,34 @@
 {
   "name": "panther3",
-  "version": "3.0.0",
+  "version": "3.0.0-pre-alpha",
   "private": true,
   "dependencies": {
-    "@nasaworldwind/worldwind": "^0.9.0",
+    "@nasaworldwind/worldwind": "0.9.0",
     "babel-preset-env": "1.7.0",
-    "classnames": "2.2.5",
-    "d3": "4.13.0",
-    "earcut": "2.1.3",
-    "fuzzy": "0.1.3",
+    "classnames": "2.2.6",
+    "d3": "5.7.0",
     "fuzzysort": "1.1.4",
     "isomorphic-fetch": "2.2.1",
-    "jquery": "3.3.1",
-    "jquery-ui": "1.12.1",
-    "lodash": "4.17.5",
-    "lodash-clean": "2.0.1",
-    "moment": "2.21.0",
-    "osmtogeojson": "^3.0.0-beta.3",
+    "lodash": "4.17.11",
+    "moment": "2.23.0",
     "path": "0.12.7",
-    "proj4": "2.4.4",
-    "prop-types": "15.6.1",
-    "rc-slider": "8.6.1",
-    "re-reselect": "2.1.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-redux": "5.0.7",
-    "react-resize-detector": "2.3.0",
-    "react-rnd": "7.4.0",
-    "react-scripts": "1.1.4",
+    "prop-types": "15.6.2",
+    "rc-slider": "8.6.4",
+    "re-reselect": "2.3.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-redux": "6.0.0",
+    "react-resize-detector": "3.4.0",
+    "react-rnd": "9.0.4",
+    "react-scripts": "2.1.3",
     "react-select": "1.2.1",
     "react-select-fast-filter-options": "0.2.3",
     "react-virtualized-select": "3.1.3",
-    "redux": "3.7.2",
+    "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-mock-store": "1.5.3",
-    "redux-thunk": "2.2.0",
-    "redux-watch": "1.1.1",
-    "reselect": "3.0.1",
-    "select2": "^4.0.6-rc.1",
-    "string": "^3.3.3",
-    "tinysort": "^2.3.6",
-    "underscore": "^1.8.3",
-    "wicket": "^1.3.2"
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,5 +42,11 @@
     "babel-preset-env": "1.7.0",
     "babel-plugin-jest-hoist": "23.2.0",
     "redux-testkit": "1.0.6"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
