--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "2.23.0",
     "path": "0.12.7",
     "prop-types": "15.6.2",
+    "query-string": "6.2.0",
     "rc-slider": "8.6.4",
     "re-reselect": "2.3.0",
     "react": "16.7.0",
