--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "2.2.6",
     "d3": "5.7.0",
     "fuzzysort": "1.1.4",
+    "i18next": "13.1.2",
     "isomorphic-fetch": "2.2.1",
     "lodash": "4.17.11",
     "moment": "2.23.0",
@@ -18,6 +19,7 @@
     "re-reselect": "2.3.0",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-i18next": "9.0.2",
     "react-redux": "6.0.0",
     "react-resize-detector": "3.4.0",
     "react-rnd": "9.0.4",
