--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-logger": "3.0.6",
     "redux-mock-store": "1.5.3",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "uri-templates": "0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
