--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-preset-env": "1.7.0",
     "classnames": "2.2.6",
+    "connected-react-router": "6.2.2",
     "d3": "5.7.0",
     "fuzzysort": "1.1.4",
+    "history": "4.7.2",
     "i18next": "13.1.2",
     "isomorphic-fetch": "2.2.1",
     "lodash": "4.17.11",
@@ -25,6 +27,7 @@
     "react-redux": "6.0.0",
     "react-resize-detector": "3.4.0",
     "react-rnd": "9.0.4",
+    "react-router": "4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "1.2.1",
     "react-select-fast-filter-options": "0.2.3",
