--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-resize-detector": "3.4.0",
     "react-rnd": "9.0.4",
     "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "2.3.0",
     "react-select-fast-filter-options": "0.2.3",
