--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "2.1.3",
     "react-select": "2.3.0",
     "react-select-fast-filter-options": "0.2.3",
+    "react-truncate": "2.4.0",
     "react-virtualized-select": "3.1.3",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
