--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "@manaflair/redux-batch": "1.0.0",
     "@nasaworldwind/worldwind": "0.9.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-preset-env": "1.7.0",
