--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "re-reselect": "2.3.0",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-favicon": "0.0.16",
     "react-helmet": "5.2.1",
     "react-i18next": "9.0.2",
     "react-redux": "6.0.0",
