--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "xml2js": "0.4.19"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --modulePaths=src",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
