--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "2.23.0",
     "node-sass": "4.11.0",
     "oaf-react-router": "^2.0.0",
+    "parse-prop-types": "^0.3.0",
     "path": "0.12.7",
     "prop-types": "15.6.2",
     "query-string": "6.2.0",
